syntax = "proto3";

option go_package = "github.com/rishirajpal01/canvas";

message RequestMessage {
    int32 MessageType = 1;
    int32 PixelId = 2;
    int32 Color = 3;
}

message ResponseMessage {
    int32 MessageType = 1;
    string Message = 2;
    repeated int32 Canvas = 3;
    string UserId = 4;
    int32 PixelId = 5;
    int32 Color = 6;
    int64 TimeStamp = 7;
    int32 CanvasWidth = 8;
    int32 CanvasHeight = 9;
    int32 UserCooldown = 10;
    int32 PixelCooldown = 11;
    int32 PingInterval = 12;
    int32 DisconnectTimeout = 13;
}